--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dartz: ^0.10.1
   google_maps_flutter: ^2.2.8
   permission_handler: ^11.3.1
+  syncfusion_flutter_datepicker: ^25.2.4
 
 dev_dependencies:
   flutter_test:
